--- a/GusList/war/WEB-INF/web.xml
+++ b/GusList/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>adDataServlet</servlet-name>
-    <servlet-class>edu.gac.mcs270.hvidsten.guslist.server.AdDataServiceImpl</servlet-class>
+    <servlet-name>postDataServiceImpl</servlet-name>
+    <servlet-class>edu.gac.mcs270.hvidsten.guslist.server.PostDataServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>adDataServlet</servlet-name>
-    <url-pattern>/guslist/addata</url-pattern>
+    <servlet-name>postDataServiceImpl</servlet-name>
+    <url-pattern>/guslist/postdata</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
